fix table content align

--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@ code {
 }
 
 table {
+  word-break: normal;
   min-width: 70%;
   max-width: 100%;
   margin: 0 auto;
@@ -47,7 +48,6 @@ tr th {
 }
 td {
 padding: 8px;
-text-align: center;
 }
 
 .footnote a {
